--- a/src/app.css
+++ b/src/app.css
@@ -48,6 +48,7 @@ img {
   margin: auto;
   overflow: hidden;
   padding: 0 2rem;
+
 }
 
 /* Text Styles*/
@@ -115,9 +116,15 @@ img {
 /* Cards */
 .card {
   padding: 1rem;
-  border: #ccc 1px solid;
+  border: #393c42 1px solid;
+  background-color: #25282c;
   margin: 0.7rem 0;
   border-radius: 10px;
+
+}
+.card:hover {
+  border: #686e78 1px solid;
+  
 }
 
 /* List */
@@ -360,9 +367,14 @@ table th {
   z-index: 1;
   width: 100%;
   opacity: 0.9;
-  margin-bottom: 1rem;
+  /* margin-bottom: 1rem; */
+
 }
 
+.line{
+  
+  border-bottom: 1px solid #4c5057;
+}
 .navbar ul {
   display: flex;
 }
@@ -375,10 +387,13 @@ table th {
 
 .navbar a:hover {
   color: var(--light-color);
+
 }
 
 .navbar .welcome span {
   margin-right: 0.6rem;
+
+
 }
 
 /* Mobile Styles */
