--- a/src/app.css
+++ b/src/app.css
@@ -358,6 +358,11 @@ table th {
   background: var(--light-color);
 }
 
+
+
+
+
+
 /* Navbar */
 .navbar {
   display: flex;
@@ -405,12 +410,12 @@ table th {
   .grid-2,
   .grid-3,
   .grid-4 {
-    grid-template-columns: 3fr;
+    grid-template-columns: repeat(2, 1fr);
   }
 
   img{
     width: 100%;
-    height: inherit;
+    /* height: 100%; */
   }
 
   /* Text Styles */
@@ -438,12 +443,96 @@ table th {
   }
 }
 
-@media(max-width: 450px){
+@media(max-width: 480px){
   .grid-2,
   .grid-3,
   .grid-4 {
-    grid-template-columns: 1fr;
+      grid-template-columns: repeat(1, 1fr);
+  }
+  img {
+    width: 100%;
   }
 }
+
+
+/* hamburger */
+#menu__toggle {
+  opacity: 0;
+}
+#menu__toggle:checked + .menu__btn > span {
+  transform: rotate(45deg);
+}
+#menu__toggle:checked + .menu__btn > span::before {
+  top: 0;
+  transform: rotate(0deg);
+}
+#menu__toggle:checked + .menu__btn > span::after {
+  top: 0;
+  transform: rotate(90deg);
+}
+#menu__toggle:checked ~ .menu__box {
+  left: 0 !important;
+}
+.menu__btn {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  width: 26px;
+  height: 26px;
+  cursor: pointer;
+  z-index: 1;
+}
+.menu__btn > span,
+.menu__btn > span::before,
+.menu__btn > span::after {
+  display: block;
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  background-color: #616161;
+  transition-duration: .25s;
+}
+.menu__btn > span::before {
+  content: '';
+  top: -8px;
+}
+.menu__btn > span::after {
+  content: '';
+  top: 8px;
+}
+.menu__box{
+  display: block;
+  position: fixed;
+  top: 0;
+  left: -100%;
+  width: 300px;
+  height: 100%;
+  margin: 0;
+  padding: 80px 0;
+  list-style: none;
+  background-color: #CFD8DC;
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
+  transition-duration: .25s;
+}
+.menu__item {
+  display: block;
+  padding: 12px 24px;
+  color: #333;
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  text-decoration: none;
+  transition-duration: .25s;
+}
+.menu__item:hover {
+  background-color: #CFD8DC;
+}
+
+
+
+
+
+
+/* color */
 
 
