--- a/src/app.css
+++ b/src/app.css
@@ -315,7 +315,6 @@ img {
 }
 
 .round-img {
-  /* border-radius: 50%; */
   border-radius: 10px;
 }
 
@@ -360,102 +359,7 @@ table th {
 
 
 
-
-
-
-/* Navbar */
-.navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0.7rem 2rem;
-  z-index: 1;
-  width: 100%;
-  opacity: 0.9;
-  /* margin-bottom: 1rem; */
-
-}
-
-.line{
-  
-  border-bottom: 1px solid #4c5057;
-}
-.navbar ul {
-  display: flex;
-}
-
-.navbar a {
-  color: #fff;
-  padding: 0.45rem;
-  margin: 0 0.25rem;
-}
-
-.navbar a:hover {
-  color: var(--light-color);
-
-}
-
-.navbar .welcome span {
-  margin-right: 0.6rem;
-
-
-}
-
-/* Mobile Styles */
-@media (max-width: 900px) {
-  .hide-sm {
-    display: none;
-  }
-
-  .grid-2,
-  .grid-3,
-  .grid-4 {
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  img{
-    width: 100%;
-    /* height: 100%; */
-  }
-
-  /* Text Styles */
-  .x-large {
-    font-size: 3rem;
-  }
-
-  .large {
-    font-size: 2rem;
-  }
-
-  .lead {
-    font-size: 1rem;
-  }
-
-  /* Navbar */
-  .navbar {
-    display: block;
-    text-align: center;
-  }
-
-  .navbar ul {
-    text-align: center;
-    justify-content: center;
-  }
-}
-
-@media(max-width: 480px){
-  .grid-2,
-  .grid-3,
-  .grid-4 {
-      grid-template-columns: repeat(1, 1fr);
-  }
-  img {
-    width: 100%;
-  }
-}
-
-
-/* hamburger */
+/* hamburger  menu*/
 #menu__toggle {
   opacity: 0;
 }
@@ -510,14 +414,14 @@ table th {
   margin: 0;
   padding: 80px 0;
   list-style: none;
-  background-color: #CFD8DC;
+  background-color: #25282c;
   box-shadow: 2px 2px 6px rgba(0, 0, 0, .4);
   transition-duration: .25s;
 }
 .menu__item {
   display: block;
   padding: 12px 24px;
-  color: #333;
+  color: #CFD8DC;
   font-family: 'Roboto', sans-serif;
   font-size: 20px;
   font-weight: 600;
@@ -527,12 +431,60 @@ table th {
 .menu__item:hover {
   background-color: #CFD8DC;
 }
+/* hamburger  menu end*/
 
 
 
 
+/* Mobile Styles */
+@media (max-width: 900px) {
+  .hide-sm {
+    display: none;
+  }
 
+  .grid-2,
+  .grid-3,
+  .grid-4 {
+    grid-template-columns: repeat(2, 1fr);
+  }
 
-/* color */
+  img{
+    width: 100%;
+    /* height: 100%; */
+  }
 
+  /* Text Styles */
+  .x-large {
+    font-size: 3rem;
+  }
 
+  .large {
+    font-size: 2rem;
+  }
+
+  .lead {
+    font-size: 1rem;
+  }
+
+  /* Navbar */
+  .navbar {
+    display: block;
+    text-align: center;
+  }
+
+  .navbar ul {
+    text-align: center;
+    justify-content: center;
+  }
+}
+
+@media(max-width: 480px){
+  .grid-2,
+  .grid-3,
+  .grid-4 {
+      grid-template-columns: repeat(1, 1fr);
+  }
+  img {
+    width: 100%;
+  }
+}
